@@ -571,4 +571,6 @@ v0.94
   - Added "subscenes", i.e. scenes of objects nested within the 
     main window.
   - Allowed the coordinates of the viewport to be set.
+  - Changed the behaviour of pop3d() and rgl.pop():  the type is
+    now ignored if id is non-zero.
   
